completed part 1
